# ftxui-starter

./: CMakeLists.txt  README.md  build.sh  flake.nix
build_emscripten/src/: run_webassembly.py
snap/: snapcraft.yaml
src/: index.html  main.cpp
